<resources>
    <string name="app_name">Organize</string>
    <string name="facebook_app_id">1888152091466735</string>
    <string name="google_key_api">AIzaSyD5SaYL196-cr2KrTcZv7SAIpSajWdcM18</string>
    <string name="banner_admob">ca-app-pub-2820342401435245~3271113410</string>
    <string name="content_is_not_registered">Não possuo cadastro</string>
    <string name="content_is_not_security_data">Não lembro meus dados de segurança</string>
    <string name="content_is_registered">Já tenho um cadastro</string>
    <string name="content_presentation">Morbi a metus. Phasellus enim erat, vestibulum vel, aliquam a, posuere eu, velit. Nullam sapien sem, ornare ac, nonummy non, lobortis a, enim. Nunc tincidunt ante vitae massa. Duis ante</string>
    <string name="content_term_use">Acesse o TERMO DE USO E PRIVACIDADE do sistema.</string>
    <string name="date_format">dd-mm-yyyy</string>
    <string name="error_message_conect">Erro de conexão. Verifique a internet</string>
    <string name="error_message_generic">Erro ao conectar ao servidor.</string>
    <string name="error_message_data_violation">Erro ao salvar dados. Tentativa de salvar dados inválidos ou duplicados.Se não concorda com este erro, entre em contato com o suporte para maiores informações.</string>
    <string name="error_photo_loading">Não foi possível usar esta imagem. Por favor tente novamente.</string>
    <string name="error_title">Erro</string>
    <string name="error_send_mail_validate">O e-mail de validação da conta não foi enviado.</string>
    <string name="info_all_required_fields">Todos os campos são obrigatórios</string>
    <string name="info_loading">Carregando...</string>
    <string name="info_no_data">Nada de novo por aqui =).</string>
    <string name="info_permission_camara">Você precisa permitir o aplicativo usar a câmara para usar esta opção.</string>
    <string name="info_required_fields">* Campos obrigatórios</string>
    <string name="info_permission_phone">Você precisa permitir o aplicativo usar a discagem telefônica para usar esta opção.</string>
    <string name="label_about">Sobre o aplicativo</string>
    <string name="label_advantages">Vantagens</string>
    <string name="label_all">Todos</string>
    <string name="label_birth_date">Data de nascimento</string>
    <string name="label_call">Realizar chamada</string>
    <string name="label_camara">Câmara</string>
    <string name="label_contact">Entre em contato</string>
    <string name="label_cpf">CPF</string>
    <string name="label_current_plan">Seu plano atual é:</string>
    <string name="label_enter">Entrar</string>
    <string name="label_final_date">Fim</string>
    <string name="label_forgot_password">Esqueci minha senha</string>
    <string name="label_galery">Galeria</string>
    <string name="label_gender_fem">Feminino</string>
    <string name="label_gender_masc">Masculino</string>
    <string name="label_gender">Gênero</string>
    <string name="label_just_friends">Somente amigos</string>
    <string name="label_keep_logged">Manter Logado</string>
    <string name="label_know_more">Saiba mais</string>
    <string name="label_know_system">Conhecer o sistema</string>
    <string name="label_login_email">Login com E-mail</string>
    <string name="label_login_facebook">Login com Facebook</string>
    <string name="label_login">Login</string>
    <string name="label_mail">E-mail</string>
    <string name="label_mission">Missão</string>
    <string name="label_monthly">por mês</string>
    <string name="label_name">Nome Completo</string>
    <string name="label_nav_events">Eventos</string>
    <string name="label_nav_home">Home</string>
    <string name="label_nav_institutional">Institucional</string>
    <string name="label_nav_loggout">Sair</string>
    <string name="label_nav_partners">Parceiros</string>
    <string name="label_nav_payment">Pagamento</string>
    <string name="label_nav_purchase">Compras</string>
    <string name="label_nav_settings">Configurações</string>
    <string name="label_nav_shedule">Agenda</string>
    <string name="label_nav_user">Dados Pessoais</string>
    <string name="label_negative_button">Cancelar</string>
    <string name="label_no_one">Ninguém</string>
    <string name="label_notifications">Notificações</string>
    <string name="label_our_plans">Nossos Planos</string>
    <string name="label_password_confirm">Confirme a senha</string>
    <string name="label_password">Senha</string>
    <string name="label_plan_basic">Plano Básico</string>
    <string name="label_plan_free">Plano Gratuito</string>
    <string name="label_plan_identifier">Identificação do Plano</string>
    <string name="label_plan_premium">Plano Prêmium</string>
    <string name="label_plan_question">Escolha seu plano de acesso</string>
    <string name="label_plan">Plano</string>
    <string name="label_positive_button">OK</string>
    <string name="label_privacy">Privacidade</string>
    <string name="label_register_user">Registro de usuário</string>
    <string name="label_select_privacy">Escolha o nivel de acesso ao seu perfil</string>
    <string name="label_send_mail">Enviar e-mail como: </string>
    <string name="label_send">Enviar</string>
    <string name="label_site">www.organize4event.com</string>
    <string name="label_skip_tutorial">Pular o tutorial</string>
    <string name="label_start_date">Início</string>
    <string name="label_subject">Assunto: </string>
    <string name="label_term_use">Termo de Uso</string>
    <string name="label_upload_picture_title">Enviar foto</string>
    <string name="label_upload_picture">Selecione uma opção para enviar sua foto.</string>
    <string name="label_validate_code">Código de validação</string>
    <string name="label_values">Valores</string>
    <string name="label_vision">Visão</string>
    <string name="label_welcome_fem">Bem vinda</string>
    <string name="label_welcome_masc">Bem vindo</string>
    <string name="label_select_security_question">Selecione sua pergunta de segurança</string>
    <string name="label_answer">Resposta Segura</string>
    <string name="label_verify_security">Verificação de segurança</string>
    <string name="label_security_questions">Perguntas de Segurança</string>
    <string name="label_menu_edit">Editar</string>
    <string name="label_menu_address">Endereço</string>
    <string name="label_menu_personal_data">Dados Pessoais</string>
    <string name="label_menu_contact">Contato</string>
    <string name="label_menu_academic">Dados Acadêmicos</string>
    <string name="label_menu_social_network">Redes Sociais</string>
    <string name="label_menu_security">Segurança do Perfil</string>
    <string name="label_institution">Instituições</string>
    <string name="label_course">Cursos</string>
    <string name="label_class">Turmas</string>
    <string name="label_new_institution">Nova Instituição</string>
    <string name="label_new_course">Novo Curso</string>
    <string name="label_new_class">Nova Turma</string>
    <string name="label_new_security_question">Nova Pergunta</string>
    <string name="label_send_mail_validate">Reenviar e-mail</string>
    <string name="label_rg_number">Número do RG</string>
    <string name="label_rg_uf">Estado de emissão do RG</string>
    <string name="label_rg_orgao">Órgão emissor do RG</string>
    <string name="label_rg_date">Data de emissão do RG</string>
    <string name="label_responsible_name">Nome do responsável legal (+21)</string>
    <string name="label_responsible_cpf">CPF do responsável legal</string>
    <string name="label_save">Salvar</string>
    <string name="message_call_phone">Deseja realizar uma ligação? Isto acarretará em gastos de consumo de acordo com seu plano em sua operadora.</string>
    <string name="message_confirmation_forgot_password">E-mail de recuperação de senha enviado com sucesso.</string>
    <string name="message_free">GRÁTIS!</string>
    <string name="message_info_birth_date">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus eget sem quis risus sagittis tincidunt nec tempus libero. Suspendisse non.</string>
    <string name="message_info_code_plan">Código de confirmação enviado em seu e-mail na contratação do plano. Caso não tenha recebido o codigo ou não o solicitou, entre em contato com o suporte Organize ou acesse com o plano gratuito.</string>
    <string name="message_info_cpf">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus eget sem quis risus sagittis tincidunt nec tempus libero. Suspendisse non.</string>
    <string name="message_info_password">Entre 6 a 10 caracteres alfanuméricos.</string>
    <string name="message_list_plan">Sobre qual plano deseja informações?</string>
    <string name="message_whatsapp">É necessário ter o Whatsapp instalado para executar essa requisição.</string>
    <string name="message_error_recovery_password">Não foi possível verificar seus dados, por favor entre em contato com o suporte Organize4Event para mais informações. \n\n<b>E-mail:</b> suporte@organize4event.com \n\n<b>Telefone:</b> (31) 9xxxx-xxxx</string>
    <string name="message_not_security_data">Entre em contato com o suporte Organize4Event para informações sobre seu cadastro. \n\n<b>E-mail:</b> suporte@organize4event.com \n\n<b>Telefone:</b> (31) 9xxxx-xxxx</string>
    <string name="message_success_recovery_password">Uma mensagem com as instruções para recuperação de sua senha foi enviado a você. Por favor verifique seu e-mail.</string>
    <string name="message_not_facebook_login">O login com Facebook não foi autorizado. Entre com seu e-mail e senha ou acesse <b>Não possuo cadastro</b> para se registrar.</string>
    <string name="message_send_validate_mail">Enviamos um e-mail de validação para você. Verifique seu e-mail e valide sua conta.</string>
    <string name="message_not_validate_email">Não identificamos a validação do seu e-mail. Por favor, acesse seu e-mail e confirme sua conta.</string>
    <string name="message_info_rg_data">insira essa poha logo e para de morrinha.</string>
    <string name="message_info_responsible">você é menor de idade, alguém tem que pagar suas dívidas.</string>
    <string name="notification_login_brief_description">Acesso ao sistema</string>
    <string name="notification_login_description">Sistema acessado pela plataforma ANDROID em: </string>
    <string name="notification_register_brief_description">Usuário registrado</string>
    <string name="notification_register_description">Usuário registrado pela plataforma ANDROID em: </string>
    <string name="placeholder_cpf">Insira o seu CPF.</string>
    <string name="placeholder_date">Insira a data no formato dd/mm/aaaa.</string>
    <string name="placeholder_mail">Insira o seu e-mail.</string>
    <string name="placeholder_name">Insira o seu nome.</string>
    <string name="placeholder_password_confirm">Confirme sua senha.</string>
    <string name="placeholder_password">Insira a sua senha.</string>
    <string name="placeholder_validate_code">Insira o código de validação.</string>
    <string name="placeholder_answer">Insira sua resposta segura.</string>
    <string name="placeholder_rg_number">Insira o número do seu RG.</string>
    <string name="placeholder_rg_uf">Insira a sigla do estado de emissão do RG.</string>
    <string name="placeholder_rg_orgao">Insira o órgão emissor do RG.</string>
    <string name="placeholder_rg_date">Insira a data de emissão do RG.</string>
    <string name="placeholder_responsible_name">Insira o nome de um responsável (+21).</string>
    <string name="placeholder_responsible_cpf">Insira o CPF do responsável.</string>
    <string name="validate_date">Data inválida.</string>
    <string name="validate_mail">E-mail inválido.</string>
    <string name="validate_password_confirm">As senhas não são iguais.</string>
    <string name="validate_password">Senha inválida.</string>
    <string name="validate_required_field">O campo não pode ser vazio</string>
</resources>