<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/menu_more"
        android:icon="@drawable/ic_more_vert"
        android:title="@string/label_menu_edit"
        app:showAsAction="ifRoom">

            <item
                android:id="@+id/menu_edit"
                android:title="@string/label_menu_edit"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu_address"
                android:title="@string/label_menu_address"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu_contact"
                android:title="@string/label_menu_contact"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu_academic"
                android:title="@string/label_menu_academic"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu_social_network"
                android:title="@string/label_menu_social_network"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu_security"
                android:title="@string/label_menu_security"
                app:showAsAction="never" />
    </group>
</menu>